2004-06-23  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Pretend ftime() is not available. Needed by
	CL_TIMES_CLOCK.

2004-06-21  Ralf Stephan  <ralf@ark.in-berlin.de>

	* doc/cln.tex: Document jacobi, isprobprime and nextprobprime.

2004-06-18  Richard B. Kreckel  <kreckel@ginac.de>

	* rational/transcendental/cl_RA_logp.cc: fix bug where base is
	reciprocal of an integer.
	Reported by Niklas Knutsson <nq@altern.org>.

2004-06-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* src/complex/ring/cl_C_ring.cc, src/integer/ring/cl_I_ring.cc,
	src/rational/ring/cl_RA_ring.cc, src/real/ring/cl_R_ring.cc:
	Make template specializations explicit.

2004-06-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* src/complex/input/cl_N_read.cc, src/float/input/cl_F_read.cc,
	src/integer/input/cl_I_read.cc, src/rational/input/cl_RA_read.cc,
	src/real/input/cl_R_read.cc:  Remove unused labels.

2004-06-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* benchmarks/timebench1.cc, benchmarks/timebench2a.LiDIA.cc,
	benchmarks/timebench2a.cc, benchmarks/timebench2ap.cc,
	benchmarks/timebench2b.LiDIA.cc, benchmarks/timebench2b.cc,
	examples/atan_recip.cc, examples/atanh_recip.cc,
	examples/contfrac.cc, examples/e.cc, examples/legendre.cc,
	examples/lucaslehmer.cc, examples/pi.cc, include/cln/GV.h,
	include/cln/SV.h, include/cln/malloc.h, include/cln/modules.h,
	include/cln/object.h, include/cln/string.h, src/base/cl_abort.cc,
	src/base/cl_alloca.h, src/base/cl_malloc.cc,
	src/base/random/cl_random_from.cc,
	src/base/string/cl_spushstring_append.cc,
	src/base/string/cl_spushstring_push.cc,
	src/base/string/cl_st_debug.cc,
	src/base/string/input/cl_st_gettoken.cc,
	src/complex/input/cl_N_read.cc, src/float/input/cl_F_read.cc,
	src/float/output/cl_F_dprint.cc, src/integer/input/cl_I_read.cc,
	src/rational/input/cl_RA_read.cc,
	src/real/format-output/cl_fmt_integer.cc,
	src/real/format-output/cl_fmt_paddedstring.cc,
	src/real/input/cl_R_read.cc, src/timing/cl_t_current.cc,